// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddToCartBlock /> should match snapshot with asTile prop 1`] = `
<div
  className="wrapper"
>
  <div
    className="cell"
  >
    <ForwardRef(Button)
      className="cart-button"
      onClick={[MockFunction]}
    >
      В корзину
    </ForwardRef(Button)>
  </div>
  <Box
    marginLeft={4}
    marginTop={0}
  >
    <p
      className="min-quantity"
    >
      от 1 шт
    </p>
  </Box>
</div>
`;

exports[`<AddToCartBlock /> should match snapshot with props 1`] = `
<div
  className="wrapper"
>
  <div
    className="cell"
  >
    <ForwardRef(Button)
      className="cart-button"
      onClick={[MockFunction]}
    >
      В корзину
    </ForwardRef(Button)>
  </div>
</div>
`;

exports[`<AddToCartBlock /> should match snapshot without props 1`] = `
<div
  className="wrapper"
>
  <div
    className="cell"
  >
    <ForwardRef(Button)
      className="cart-button"
    >
      В корзину
    </ForwardRef(Button)>
  </div>
</div>
`;
